k8s-deployment.yaml
# kubectl create secret tls authservice-tls -n activator-authservice --key=/home/sdlfly2000/Projects/Certificates/authservice-server-certificate.key --cert=/home/sdlfly2000/Projects/Certificates/authservice-server-certificate.crt

apiVersion: v1
kind: Namespace
metadata:
  name: activator-authservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: activator-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      terminationGracePeriodSeconds: 10
      containers:
        - name: authservice
          image: registry.activator.com/authservice/authservice:${AUTH_SERVICE_VERSION}
          ports:
          - name: http
            containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: activator-authservice
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      name: kb-port-ex
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: authservice
  namespace: activator-authservice
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authservice.activator.com
    secretName: authservice-tls
  rules:
  - host: authservice.activator.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authservice
            port:
              number: 4200
